	  some revising:
	  + Add a 'change' when hiding/unhiding an item
	  + Remove all references to an item when it's hidden
	    (preferably with the option to re-add them when unhiding)
	  + Add a link for the hidden 'h' option at /hist

1.20 - ?
	- Admins can change someone's username
	- Fixed the automatic relogin after changing password
	- Added lock indicator when browsing threads on a tag

1.19 - 2008-07-08 (r62)
	- Integrated discussion board
	- Colored diff for alies field
	- 'ttabs' for user entries
	- Removed the rating system

1.18 - 2008-07-02 (r51)
	- Releases, producers and visual novel items can't be fully deleted anymore
	- Hidden vote and vnlist items from the 'recent' lists on VN stat pages for
	  users who don't want that to be seen
	- Added warnings for empty edit summary and extreme votes
	- Changed earliest release date to 1980
	- Added NES and MSX platforms
	- All revision numbers are now local to their item ID
	- Rewrote Multi's VNDBID matching

1.17 - 2008-06-21 (r33)
	- Added PS3 and Xbox 360 to platforms
	- Relation graph generation improvements: Unicode, anti-aliassing, async
	- Removed all passwords from the main code, and created a seperate config
	  file to override all options - not available on SVN
	- Dynamic loading, several bugfixes, and code cleanup for Multi
	- Added 'School Life' and 'Protagonist' categories
	- Time and Place categories are now boolean
	- Added GTIN field to releases
	- Added links to encubed and renai.us

1.16 - 2008-05-22
	- Release dates in the current year or month without a specified day will
	  be considered as not yet released
	- Added platform and language icons to the VN browser
	- Grouped producers, user stats and general information on the VN page
	- Added language icons to producer browser
	- A little CSS cleanup
	- Grouped category browser and search into one advanced search
	- Updated sitemap generator
	- Pattern matching bug fixes in Multi::IRC, and better handling of commands