@@ -64,7 +64,7 @@ our $PLAT = {
   gba => 'Game Boy Advance',
   msx => 'MSX',
   nds => 'Nintendo DS',
-  nes => 'NES',
+  nes => 'Famicom',
   psp => 'Playstation Portable',
   ps1 => 'Playstation 1',
   ps2 => 'Playstation 2',
